@@ -19,6 +19,7 @@ META.yml
 README
 scripts/abc-path-solve
 scripts/bump-version-number.pl
+scripts/tag-release.pl
 t/00-load.t
 t/input-from-string.t
 t/layouts/brain-bashers.2010-12-21.abc-path
